docs/cobblemon-tags/1.4.1/BiomeTags.md
# Biome Tags

This file contains tags related to different biomes in cobblemon, as well as some worldgen and special evolution tags.

## Tags:

<details>
<summary><b>Tag:</b> #cobblemon:is_arid</summary>

- #cobblemon:is_sandy
- #cobblemon:is_savanna

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_autumn</summary>

- #cobblemon:is_arid
- #cobblemon:is_cold_ocean
- #cobblemon:is_mountain
- #cobblemon:is_mushroom
- #cobblemon:is_taiga
- terralith:skylands_autumn
- wythers:autumnal_birch_forest
- wythers:autumnal_crags
- wythers:autumnal_flower_forest
- wythers:autumnal_forest
- wythers:autumnal_forest_edge
- wythers:autumnal_plains
- wythers:autumnal_swamp
- wythers:harvest_fields

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_badlands</summary>

- #c:mesa
- #minecraft:is_badlands
- terralith:ashen_savanna
- terralith:red_oasis
- terralith:warped_mesa
- terralith:white_mesa
- wythers:danakil_desert

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_bamboo</summary>

- minecraft:bamboo_jungle
- wythers:bamboo_jungle_canyon
- wythers:bamboo_jungle_highlands
- wythers:bamboo_jungle_swamp
- wythers:bamboo_swamp
- wythers:jade_highlands
- wythers:sakura_forest
- wythers:sandy_jungle
- wythers:sparse_bamboo_jungle

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_beach</summary>

- #minecraft:is_beach
- wythers:guelta
- wythers:sand_dunes

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_cave</summary>

- #c:caves
- #c:underground
- #forge:is_underground
- minecraft:dripstone_caves
- minecraft:lush_caves
- terralith:cave/andesite_caves
- terralith:cave/desert_caves
- terralith:cave/diorite_caves
- terralith:cave/fungal_caves
- terralith:cave/granite_caves
- terralith:cave/infested_caves
- terralith:cave/thermal_caves
- terralith:cave/underground_jungle
- wythers:calcite_caverns
- wythers:deep_dark_incursion
- wythers:deep_underground
- wythers:fungous_dripstone_caves
- wythers:lichenous_caves
- wythers:lichenous_dripstone_caves
- wythers:lush_dripstone_caves
- wythers:lush_fungous_dripstone_caves
- wythers:lush_shroom_caves
- wythers:mossy_caves
- wythers:mossy_dripstone_caves
- wythers:mushroom_caves
- wythers:underground
- wythers:volcanic_chamber

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_coast</summary>

- #c:stony_shores
- #cobblemon:is_beach
- minecraft:stony_shore
- terralith:basalt_cliffs
- terralith:granite_cliffs
- terralith:white_cliffs
- wythers:calcite_coast
- wythers:coastal_mangroves
- wythers:cold_island
- wythers:cold_stony_shore
- wythers:deepslate_shore
- wythers:frigid_island
- wythers:frozen_island
- wythers:gravelly_beach
- wythers:icy_shore
- wythers:mediterranean_island
- wythers:temperate_island
- wythers:tropical_island
- wythers:warm_stony_shore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_cold</summary>

- #byg:is_cold
- #c:climate_cold
- #cobblemon:is_cold_ocean
- #cobblemon:is_freezing
- #cobblemon:is_peak
- #cobblemon:is_taiga
- #cobblemon:is_tundra
- #forge:is_cold/overworld
- wythers:berry_bog

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_cold_ocean</summary>

- #cobblemon:is_frozen_ocean
- minecraft:cold_ocean
- minecraft:deep_cold_ocean

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_deep_dark</summary>

- minecraft:deep_dark
- terralith:cave/crystal_caves
- terralith:cave/deep_caves
- terralith:cave/frostfire_caves
- terralith:cave/mantle_caves
- terralith:cave/tuff_caves
- wythers:deep_dark_forest
- wythers:deep_dark_incursion

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_deep_ocean</summary>

- #c:deep_ocean
- #minecraft:is_deep_ocean
- wythers:deep_icy_ocean

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_dense</summary>

- #c:vegetation_dense
- #cobblemon:is_jungle
- #forge:is_dense
- #forge:is_dense/overworld
- minecraft:dark_forest
- minecraft:mangrove_swamp

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_desert</summary>

- #byg:is_desert
- #c:desert
- #wythers:is_desert
- minecraft:desert
- terralith:ancient_sands
- terralith:cave/desert_caves
- terralith:desert_canyon
- terralith:desert_oasis
- terralith:desert_spires
- terralith:lush_desert
- terralith:red_oasis
- terralith:sandstone_valley
- wythers:badlands_desert
- wythers:desert_island
- wythers:kwongan_heath
- wythers:outback_desert
- wythers:red_desert
- wythers:sandy_jungle

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_dripstone</summary>

- minecraft:dripstone_caves
- terralith:fractured_savanna
- terralith:stony_spires
- wythers:fungous_dripstone_caves
- wythers:lichenous_dripstone_caves
- wythers:lush_dripstone_caves
- wythers:lush_fungous_dripstone_caves
- wythers:mossy_dripstone_caves

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_floral</summary>

- #byg:is_floral
- #c:floral
- #c:flower_forests
- byg:allium_fields
- byg:amaranth_fields
- byg:cherry_blossom_forest
- byg:orchard
- byg:rose_fields
- byg:skyris_vale
- minecraft:cherry_grove
- minecraft:flower_forest
- minecraft:meadow
- minecraft:sunflower_plains
- terralith:blooming_plateau
- terralith:blooming_valley
- terralith:lavender_forest
- terralith:lavender_valley
- terralith:sakura_grove
- terralith:sakura_valley
- wythers:autumnal_flower_forest
- wythers:flowering_pantanal
- wythers:jacaranda_savanna
- wythers:lapacho_plains
- wythers:sakura_forest
- wythers:spring_flower_fields
- wythers:spring_flower_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_forest</summary>

- #c:flower_forests
- #c:tree_deciduous
- #minecraft:is_forest
- minecraft:cherry_grove
- terralith:alpha_islands
- terralith:alpha_islands_winter
- terralith:blooming_valley
- terralith:forested_highlands
- terralith:lavender_forest
- terralith:lavender_valley
- terralith:mirage_isles
- terralith:sakura_grove
- terralith:sakura_valley
- terralith:temperate_highlands
- wythers:birch_taiga
- wythers:boreal_forest_red
- wythers:boreal_forest_yellow
- wythers:dry_tropical_forest
- wythers:subtropical_forest
- wythers:tangled_forest
- wythers:tropical_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_freezing</summary>

- #byg:is_snowy
- #c:snowy
- #cobblemon:is_frozen_ocean
- #cobblemon:is_glacial
- #cobblemon:is_snowy_forest
- #forge:is_snowy
- byg:cardinal_tundra
- minecraft:frozen_river
- minecraft:jagged_peaks
- minecraft:snowy_beach
- minecraft:snowy_plains
- minecraft:snowy_slopes
- terralith:emerald_peaks
- terralith:scarlet_mountains
- terralith:skylands_winter
- terralith:snowy_badlands
- wythers:crimson_tundra
- wythers:frozen_island
- wythers:snowy_bog
- wythers:snowy_canyon
- wythers:snowy_peaks
- wythers:snowy_tundra

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_freshwater</summary>

- #cobblemon:is_river
- #cobblemon:is_swamp
- wythers:desert_lakes
- wythers:guelta
- wythers:tropical_forest_river

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_frozen_ocean</summary>

- minecraft:deep_frozen_ocean
- minecraft:frozen_ocean
- terralith:frozen_cliffs
- wythers:deep_icy_ocean
- wythers:icy_ocean

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_glacial</summary>

- #byg:is_icy
- #c:icy
- minecraft:frozen_peaks
- minecraft:ice_spikes
- terralith:cave/frostfire_caves
- terralith:frozen_cliffs
- terralith:glacial_chasm
- wythers:frozen_island
- wythers:glacial_cliffs
- wythers:ice_cap
- wythers:icy_crags

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_grassland</summary>

- #cobblemon:is_plains
- #cobblemon:is_savanna

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_highlands</summary>

- minecraft:meadow
- terralith:alpine_highlands
- terralith:arid_highlands
- terralith:blooming_plateau
- terralith:highlands
- wythers:bamboo_jungle_highlands
- wythers:eucalyptus_deanei_forest
- wythers:forested_highlands
- wythers:highland_tropical_rainforest
- wythers:highlands
- wythers:huangshan_highlands
- wythers:jade_highlands
- wythers:wistman_woods

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_hills</summary>

- #c:mountain_slope
- #cobblemon:is_highlands
- #forge:is_slope
- #minecraft:is_hill
- terralith:blooming_valley
- terralith:forested_highlands
- terralith:lavender_valley
- terralith:lush_valley
- terralith:moonlight_valley
- terralith:sakura_valley
- terralith:savanna_slopes
- terralith:temperate_highlands
- terralith:yosemite_lowlands
- wythers:autumnal_crags
- wythers:ayers_rock
- wythers:icy_crags
- wythers:old_growth_taiga_crags
- wythers:taiga_crags
- wythers:temperate_rainforest_crags
- wythers:thermal_taiga_crags
- wythers:windswept_jungle

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_island</summary>

- #cobblemon:is_tropical_island
- byg:lush_stacks
- minecraft:mushroom_fields
- terralith:alpha_islands
- terralith:alpha_islands_winter
- terralith:mirage_isles
- terralith:warped_mesa
- wythers:cold_island
- wythers:desert_island
- wythers:frigid_island
- wythers:frozen_island
- wythers:jungle_island
- wythers:mediterranean_island
- wythers:mediterranean_island_thermal_springs
- wythers:mushroom_island
- wythers:temperate_island
- wythers:tropical_island

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_jungle</summary>

- #minecraft:is_jungle
- terralith:cave/underground_jungle
- wythers:dripleaf_swamp
- wythers:eucalyptus_deanei_forest
- wythers:highland_tropical_rainforest
- wythers:humid_tropical_grassland
- wythers:jungle_canyon
- wythers:subtropical_forest
- wythers:subtropical_forest_edge
- wythers:subtropical_grassland
- wythers:tropical_forest
- wythers:tropical_forest_canyon
- wythers:tropical_grassland
- wythers:tropical_island
- wythers:tropical_rainforest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_lukewarm_ocean</summary>

- minecraft:deep_lukewarm_ocean
- minecraft:lukewarm_ocean
- wythers:tropical_beach
- wythers:tropical_island
- wythers:warm_stony_shore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_lush</summary>

- #forge:is_lush
- byg:lush_stacks
- minecraft:lush_caves
- terralith:cave/underground_jungle
- wythers:lichenous_caves
- wythers:lichenous_dripstone_caves
- wythers:lush_dripstone_caves
- wythers:lush_fungous_dripstone_caves
- wythers:lush_shroom_caves

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_magical</summary>

- #byg:is_magical
- #wythers:is_dark_forest
- byg:skyris_vale
- minecraft:dark_forest
- terralith:amethyst_canyon
- terralith:amethyst_rainforest
- terralith:mirage_isles
- terralith:moonlight_grove
- terralith:moonlight_valley
- wythers:lantern_river
- wythers:mushroom_island
- wythers:snowy_thermal_taiga

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_mountain</summary>

- #cobblemon:is_hills
- #forge:is_mountain
- #minecraft:is_mountain
- terralith:stony_spires
- terralith:volcanic_peaks
- terralith:windswept_spires
- terralith:yosemite_cliffs
- wythers:tibesti_mountains
- wythers:tropical_volcano
- wythers:tsingy_forest
- wythers:volcano

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_mushroom</summary>

- #c:mushroom
- #forge:is_mushroom
- minecraft:dark_forest
- minecraft:mushroom_fields
- terralith:cave/fungal_caves
- terralith:mirage_isles
- wythers:ancient_taiga
- wythers:deep_dark_incursion

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_nether_basalt</summary>

- cinderscapes:blackstone_shales
- incendium:ash_barrens
- incendium:volcanic_deltas
- incendium:withered_forest
- minecraft:basalt_deltas

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_nether_crimson</summary>

- betternether:crimson_glowing_woods
- betternether:crimson_pinewood
- betternether:nether_swampland
- betternether:nether_swampland_terraces
- byg:crimson_gardens
- gardens_of_the_dead:whistling_woods
- minecraft:crimson_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_nether_desert</summary>

- betternether:gravel_desert
- byg:quartz_desert
- byg:warped_desert
- incendium:infernal_dunes
- incendium:weeping_valley
- minecraft:soul_sand_valley

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_nether_forest</summary>

- betternether:nether_jungle
- betternether:nether_swampland
- betternether:nether_swampland_terraces
- byg:weeping_mire
- byg:withering_woods

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_nether_frozen</summary>

- byg:subzero_hypogeal

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_nether_fungus</summary>

- betternether:crimson_glowing_woods
- betternether:crimson_pinewood
- betternether:mushroom_forest
- betternether:mushroom_forest_edge
- betternether:old_fungiwoods
- betternether:old_warped_woods
- byg:crimson_gardens
- byg:embur_bog
- byg:glowstone_garden
- byg:wailing_garth
- cinderscapes:luminous_grove
- gardens_of_the_dead:soulblight_forest
- gardens_of_the_dead:whistling_woods
- incendium:inverted_forest
- minecraft:crimson_forest
- minecraft:warped_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_nether_mountain</summary>

- incendium:volcanic_deltas
- minecraft:basalt_deltas

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_nether_overgrowth</summary>

- betternether:bone_reef
- betternether:nether_grasslands
- betternether:soul_plain
- betternether:sulfuric_bone_reef
- byg:sythian_torrids

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_nether_quartz</summary>

- byg:quartz_desert
- cinderscapes:quartz_cavern
- incendium:quartz_flats

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_nether_soul_fire</summary>

- byg:subzero_hypogeal
- byg:warped_desert
- incendium:quartz_flats
- incendium:weeping_valley
- minecraft:soul_sand_valley

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_nether_soul_sand</summary>

- betternether:soul_plain
- betternether:wart_forest
- betternether:wart_forest_edge
- byg:wailing_garth
- byg:warped_desert
- cinderscapes:ashy_shoals
- cinderscapes:blackstone_shales
- gardens_of_the_dead:soulblight_forest
- incendium:weeping_valley
- minecraft:soul_sand_valley

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_nether_toxic</summary>

- byg:brimstone_caverns
- byg:wailing_garth
- incendium:toxic_heap

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_nether_warped</summary>

- betternether:nether_jungle
- betternether:old_warped_woods
- byg:wailing_garth
- byg:warped_desert
- minecraft:warped_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_nether_wasteland</summary>

- betternether:magma_land
- betternether:poor_nether_grasslands
- byg:brimstone_caverns
- byg:magma_wastes
- cinderscapes:ashy_shoals
- cinderscapes:quartz_cavern
- incendium:ash_barrens
- incendium:toxic_heap
- minecraft:nether_wastes

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_ocean</summary>

- #cobblemon:is_coast
- #cobblemon:is_cold_ocean
- #cobblemon:is_deep_ocean
- #cobblemon:is_frozen_ocean
- #cobblemon:is_lukewarm_ocean
- #cobblemon:is_warm_ocean
- #minecraft:is_ocean

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_overworld</summary>

- #cobblemon:is_arid
- #cobblemon:is_cave
- #cobblemon:is_coast
- #cobblemon:is_cold
- #cobblemon:is_deep_dark
- #cobblemon:is_floral
- #cobblemon:is_forest
- #cobblemon:is_freshwater
- #cobblemon:is_grassland
- #cobblemon:is_highlands
- #cobblemon:is_island
- #cobblemon:is_jungle
- #cobblemon:is_magical
- #cobblemon:is_mountain
- #cobblemon:is_mushroom
- #cobblemon:is_ocean
- #cobblemon:is_sky
- #cobblemon:is_spooky
- #cobblemon:is_temperate
- #cobblemon:is_thermal
- #cobblemon:is_volcanic
- #minecraft:is_overworld

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_peak</summary>

- #c:mountain_peak
- #forge:is_peak
- minecraft:frozen_peaks
- minecraft:jagged_peaks
- minecraft:snowy_slopes
- minecraft:stony_peaks
- terralith:emerald_peaks
- terralith:rocky_mountains
- terralith:scarlet_mountains
- terralith:windswept_spires
- wythers:andesite_crags
- wythers:aspen_crags

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_plains</summary>

- #byg:is_plain
- #c:plains
- #cobblemon:is_highlands
- #forge:is_plains
- minecraft:plains
- minecraft:sunflower_plains
- terralith:brushland
- terralith:steppe
- terralith:valley_clearing
- wythers:berry_bog
- wythers:cool_forest_edge
- wythers:dry_tropical_grassland
- wythers:forest_edge
- wythers:spring_flower_fields
- wythers:subtropical_forest_edge
- wythers:tropical_grassland

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_plateau</summary>

- #byg:is_plateau
- #forge:is_plateau
- minecraft:savanna_plateau
- wythers:ayers_rock

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_river</summary>

- #minecraft:is_river
- terralith:warm_river
- wythers:guelta
- wythers:tropical_forest_river

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_salt</summary>

- wythers:calcite_caverns
- wythers:calcite_coast
- wythers:mediterranean_island_thermal_spring
- wythers:salt_lakes_pink
- wythers:salt_lakes_turquoise
- wythers:salt_lakes_white
- wythers:thermal_taiga

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_sandy</summary>

- #byg:is_sandy
- #cobblemon:is_badlands
- #cobblemon:is_desert

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_savanna</summary>

- #minecraft:is_savanna
- terralith:arid_highlands
- terralith:ashen_savanna
- terralith:brushland
- terralith:desert_oasis
- terralith:fractured_savanna
- terralith:hot_shrubland
- terralith:red_oasis
- terralith:savanna_badlands
- terralith:savanna_slopes
- terralith:shrubland
- wythers:granite_canyon
- wythers:tropical_forest
- wythers:tropical_forest_canyon

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_sky</summary>

- terralith:skylands_autumn
- terralith:skylands_spring
- terralith:skylands_summer
- terralith:skylands_winter

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_snowy_forest</summary>

- minecraft:grove
- minecraft:snowy_taiga
- terralith:alpha_islands_winter
- terralith:alpine_grove
- terralith:ice_marsh
- terralith:siberian_grove
- terralith:snowy_maple_forest
- terralith:snowy_shield
- terralith:wintry_forest
- terralith:wintry_lowlands
- wythers:deep_snowy_taiga
- wythers:huangshan_highlands
- wythers:jade_highlands
- wythers:snowy_fen
- wythers:snowy_thermal_taiga

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_sparse</summary>

- #c:vegetation_sparse
- #cobblemon:is_arid
- #cobblemon:is_grassland
- #cobblemon:is_tundra
- #forge:is_sparse
- #forge:is_sparse/overworld

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_spooky</summary>

- #byg:is_spooky
- #forge:is_spooky
- #wythers:is_dark_forest
- byg:ebony_woods
- minecraft:dark_forest
- wythers:ancient_taiga
- wythers:bayou
- wythers:tangled_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_spring</summary>

- #cobblemon:is_floral
- #cobblemon:is_lukewarm_ocean
- #cobblemon:is_magical
- #cobblemon:is_plains
- terralith:skylands_spring
- the_bumblezone:floral_meadow
- wythers:spring_flower_fields
- wythers:spring_flower_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_summer</summary>

- #cobblemon:is_forest
- #cobblemon:is_jungle
- #cobblemon:is_lush
- #cobblemon:is_swamp
- #cobblemon:is_warm_ocean
- terralith:skylands_summer

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_swamp</summary>

- #byg:is_swamp
- #c:swamp
- #forge:is_swamp
- #wythers:is_swamp
- minecraft:mangrove_swamp
- minecraft:swamp
- terralith:ice_marsh
- terralith:orchid_swamp
- wythers:billabong

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_taiga</summary>

- #c:tree_coniferous
- #forge:is_coniferous
- #minecraft:is_taiga
- minecraft:grove
- terralith:alpine_grove
- terralith:haze_mountain
- terralith:ice_marsh
- terralith:moonlight_grove
- terralith:moonlight_valley
- terralith:shield_clearing
- terralith:siberian_grove
- terralith:siberian_taiga
- terralith:snowy_maple_forest
- terralith:snowy_shield
- terralith:wintry_lowlands
- wythers:ancient_taiga
- wythers:birch_taiga
- wythers:boreal_forest_red
- wythers:boreal_forest_yellow
- wythers:cold_island
- wythers:deep_snowy_taiga
- wythers:fen
- wythers:flooded_temperate_rainforest
- wythers:forested_highlands
- wythers:huangshan_highlands
- wythers:jade_highlands
- wythers:larch_taiga
- wythers:old_growth_taiga_crags
- wythers:old_growth_taiga_swamp
- wythers:pine_barrens
- wythers:snowy_thermal_taiga
- wythers:taiga_crags
- wythers:temperate_rainforest
- wythers:temperate_rainforest_crags
- wythers:thermal_taiga
- wythers:thermal_taiga_crags

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_temperate</summary>

- #cobblemon:is_forest
- #cobblemon:is_plains

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_thermal</summary>

- terralith:caldera
- terralith:cave/thermal_caves
- terralith:yellowstone
- wythers:calcite_caverns
- wythers:danakil_desert
- wythers:mediterranean_island_thermal_springs
- wythers:snowy_thermal_taiga
- wythers:thermal_taiga
- wythers:thermal_taiga_crags
- wythers:tibesti_mountains

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_tropical</summary>

- wythers:tropical_beach
- wythers:tropical_island
- wythers:tropical_volcano

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_tropical_island</summary>

- wythers:tropical_beach
- wythers:tropical_island
- wythers:tropical_volcano

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_tundra</summary>

- #c:snowy_plains
- byg:cardinal_tundra
- minecraft:ice_spikes
- minecraft:snowy_plains
- terralith:cold_shrubland
- terralith:gravel_desert
- terralith:rocky_shrubland
- terralith:snowy_badlands
- terralith:yellowstone
- wythers:crimson_tundra
- wythers:frigid_island
- wythers:ice_cap
- wythers:icy_crags
- wythers:snowy_tundra
- wythers:tundra

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_volcanic</summary>

- terralith:cave/mantle_caves
- terralith:volcanic_crater
- terralith:volcanic_peaks
- wythers:icy_volcano
- wythers:tropical_volcano
- wythers:volcanic_chamber
- wythers:volcanic_crater
- wythers:volcano

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_warm_ocean</summary>

- byg:lush_stacks
- minecraft:warm_ocean

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_winter</summary>

- #cobblemon:is_freezing
- terralith:skylands_winter
- wythers:deep_snowy_taiga

</details>

<details>
<summary><b>Tag:</b> #has_feature:apricorns_dense</summary>

- #cobblemon:is_badlands
- #cobblemon:is_desert
- #cobblemon:is_forest
- #cobblemon:is_jungle
- #cobblemon:is_snowy_forest
- #cobblemon:is_swamp
- #cobblemon:is_taiga

</details>

<details>
<summary><b>Tag:</b> #has_feature:apricorns_normal</summary>

- #cobblemon:is_grassland
- #cobblemon:is_hills
- minecraft:sparse_jungle

</details>

<details>
<summary><b>Tag:</b> #has_feature:apricorns_sparse</summary>

- #cobblemon:is_tundra

</details>

<details>
<summary><b>Tag:</b> #has_feature:revival_herbs</summary>

- minecraft:lush_caves

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_dawn_stone_normal</summary>

- #cobblemon:is_peak
- #cobblemon:is_sky

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_dawn_stone_rare</summary>

- #cobblemon:is_floral
- #cobblemon:is_glacial
- #cobblemon:is_hills

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_dusk_stone_normal</summary>

- #cobblemon:is_spooky
- #cobblemon:is_taiga

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_dusk_stone_rare</summary>

- #cobblemon:is_swamp

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_fire_stone_normal</summary>

- #cobblemon:is_desert
- #cobblemon:is_thermal
- #cobblemon:is_volcanic

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_fire_stone_rare</summary>

- #cobblemon:is_sandy

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_ice_stone_normal</summary>

- #cobblemon:is_glacial
- #cobblemon:is_snowy_forest
- #cobblemon:is_tundra

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_ice_stone_rare</summary>

- #cobblemon:is_freezing

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_leaf_stone_normal</summary>

- #cobblemon:is_forest
- #cobblemon:is_jungle
- #cobblemon:is_lush

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_leaf_stone_rare</summary>

- #cobblemon:is_swamp
- #cobblemon:is_tropical_island

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_moon_stone_dripstone</summary>

- #cobblemon:is_dripstone

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_moon_stone_normal</summary>

- #cobblemon:is_dripstone
- minecraft:mushroom_fields

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_moon_stone_rare</summary>

- #cobblemon:is_taiga

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_shiny_stone_normal</summary>

- #cobblemon:is_floral
- #cobblemon:is_magical
- #cobblemon:is_sky

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_shiny_stone_rare</summary>

- #cobblemon:is_island
- #cobblemon:is_peak

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_sun_stone_normal</summary>

- #cobblemon:is_badlands
- #cobblemon:is_dripstone
- #cobblemon:is_grassland

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_sun_stone_rare</summary>

- #cobblemon:is_desert
- #cobblemon:is_tropical_island

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_thunder_stone_normal</summary>

- #cobblemon:is_highlands
- #cobblemon:is_hills

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_thunder_stone_rare</summary>

- #cobblemon:is_jungle
- #cobblemon:is_plains

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_water_stone_normal</summary>

- #cobblemon:is_freshwater
- #cobblemon:is_ocean

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_water_stone_rare</summary>

- #cobblemon:is_jungle
- #cobblemon:is_thermal
- #cobblemon:is_tropical_island

</details>

<details>
<summary><b>Tag:</b> #has_structure:village_plains_pokecenter</summary>


</details>

<details>
<summary><b>Tag:</b> #has_structure:village_plains_pokecenter_signtest</summary>


</details>

<details>
<summary><b>Tag:</b> #vivillon_evolutions:ocean</summary>

- #cobblemon:is_coast
- #cobblemon:is_warm_ocean

</details>

<details>
<summary><b>Tag:</b> #vivillon_evolutions:river</summary>

- #cobblemon:is_river
- #cobblemon:is_swamp

</details>

<details>
<summary><b>Tag:</b> #vivillon_evolutions:sun</summary>

- #cobblemon:is_sky
- #cobblemon:is_volcanic
- minecraft:sunflower_plains

</details>

<details>
<summary><b>Tag:</b> #vivillon_evolutions:tundra</summary>

- #cobblemon:is_glacial
- #cobblemon:is_snowy_forest
- #cobblemon:is_tundra

</details>
