docs/cobblemon-tags/1.5.2/BiomeTags.md
# Biome Tags

This file contains tags related to different biomes in cobblemon, as well as some worldgen and special evolution tags.

## Tags:

<details>
<summary><b>Tag:</b> #cobblemon:is_arid</summary>

- #cobblemon:is_sandy
- #cobblemon:is_savanna

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_badlands</summary>

- #minecraft:is_badlands
- #c:mesa
- terralith:ashen_savanna
- terralith:red_oasis
- terralith:warped_mesa
- terralith:white_mesa
- wythers:danakil_desert

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_bamboo</summary>

- minecraft:bamboo_jungle
- biomesoplenty:bamboo_grove
- wythers:bamboo_jungle_canyon
- wythers:bamboo_jungle_highlands
- wythers:bamboo_jungle_swamp
- wythers:bamboo_swamp
- wythers:jade_highlands
- wythers:maple_mountains
- wythers:mushroom_island
- wythers:sakura_forest
- wythers:sandy_jungle
- wythers:sparse_bamboo_jungle
- wythers:waterlily_swamp

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_beach</summary>

- #minecraft:is_beach
- biomesoplenty:dune_beach
- wythers:guelta
- wythers:sand_dunes

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_cave</summary>

- minecraft:dripstone_caves
- minecraft:lush_caves
- #c:caves
- #c:underground
- #forge:is_underground
- biomesoplenty:glowing_grotto
- biomesoplenty:spider_nest
- terralith:cave/andesite_caves
- terralith:cave/desert_caves
- terralith:cave/diorite_caves
- terralith:cave/fungal_caves
- terralith:cave/granite_caves
- terralith:cave/infested_caves
- terralith:cave/thermal_caves
- terralith:cave/underground_jungle
- wythers:calcite_caverns
- wythers:deep_dark_incursion
- wythers:deep_underground
- wythers:fungous_dripstone_caves
- wythers:lichenous_caves
- wythers:lichenous_dripstone_caves
- wythers:lush_dripstone_caves
- wythers:lush_fungous_dripstone_caves
- wythers:lush_shroom_caves
- wythers:mossy_caves
- wythers:mossy_dripstone_caves
- wythers:mushroom_caves
- wythers:underground
- wythers:volcanic_chamber

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_cherry_blossom</summary>

- minecraft:cherry_grove
- biomesoplenty:bamboo_grove
- biomesoplenty:cherry_blossom_grove
- byg:cherry_blossom_forest
- terralith:sakura_grove
- terralith:sakura_valley
- wythers:sakura_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_coast</summary>

- minecraft:stony_shore
- #cobblemon:is_beach
- #c:stony_shores
- terralith:basalt_cliffs
- terralith:granite_cliffs
- terralith:white_cliffs
- wythers:calcite_coast
- wythers:coastal_mangroves
- wythers:cold_island
- wythers:cold_stony_shore
- wythers:deepslate_shore
- wythers:frigid_island
- wythers:frozen_island
- wythers:gravelly_beach
- wythers:icy_shore
- wythers:mediterranean_island
- wythers:temperate_island
- wythers:tropical_island
- wythers:warm_stony_shore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_cold</summary>

- #cobblemon:is_cold_ocean
- #cobblemon:is_freezing
- #cobblemon:is_peak
- #cobblemon:is_taiga
- #cobblemon:is_tundra
- #byg:is_cold
- #c:climate_cold
- #forge:is_cold/overworld
- biomesoplenty:aspen_forest
- biomesoplenty:bog
- biomesoplenty:cold_desert
- biomesoplenty:dead_forest
- biomesoplenty:hot_springs
- biomesoplenty:maple_woods
- biomesoplenty:old_growth_dead_forest
- biomesoplenty:pumpkin_patch
- biomesoplenty:seasonal_forest
- biomesoplenty:seasonal_orchard
- wythers:berry_bog

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_cold_ocean</summary>

- minecraft:cold_ocean
- minecraft:deep_cold_ocean

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_deep_dark</summary>

- minecraft:deep_dark
- terralith:cave/crystal_caves
- terralith:cave/deep_caves
- terralith:cave/frostfire_caves
- terralith:cave/mantle_caves
- terralith:cave/tuff_caves
- wythers:deep_dark_forest
- wythers:deep_dark_incursion

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_deep_ocean</summary>

- #minecraft:is_deep_ocean
- #c:deep_ocean
- wythers:deep_icy_ocean

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_desert</summary>

- minecraft:desert
- #byg:is_desert
- #c:desert
- #wythers:is_desert
- biomesoplenty:lush_desert
- darkerdepths:sandy_catacombs
- terralith:ancient_sands
- terralith:desert_canyon
- terralith:cave/desert_caves
- terralith:desert_oasis
- terralith:desert_spires
- terralith:lush_desert
- terralith:red_oasis
- terralith:sandstone_valley
- wythers:badlands_desert
- wythers:desert_island
- wythers:kwongan_heath
- wythers:outback_desert
- wythers:red_desert
- wythers:sandy_jungle

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_dripstone</summary>

- minecraft:dripstone_caves
- terralith:fractured_savanna
- biomesoplenty:fungal_jungle
- byg:dead_sea
- terralith:stony_spires
- wythers:fungous_dripstone_caves
- wythers:lichenous_dripstone_caves
- wythers:lush_dripstone_caves
- wythers:lush_fungous_dripstone_caves
- wythers:mossy_dripstone_caves

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_floral</summary>

- minecraft:cherry_grove
- minecraft:flower_forest
- minecraft:meadow
- minecraft:sunflower_plains
- #byg:is_floral
- #c:floral
- #c:flower_forests
- biomesoplenty:bamboo_grove
- biomesoplenty:cherry_blossom_grove
- biomesoplenty:field
- biomesoplenty:highland_moor
- biomesoplenty:lavender_field
- biomesoplenty:lavender_forest
- biomesoplenty:lush_savanna
- biomesoplenty:mystic_grove
- biomesoplenty:orchard
- byg:amaranth_fields
- byg:allium_fields
- byg:rose_fields
- byg:skyris_vale
- byg:cherry_blossom_forest
- byg:orchard
- terralith:blooming_plateau
- terralith:blooming_valley
- terralith:cloud_forest
- terralith:lavender_forest
- terralith:lavender_valley
- terralith:sakura_grove
- terralith:sakura_valley
- wythers:autumnal_flower_forest
- wythers:flowering_pantanal
- wythers:jacaranda_savanna
- wythers:lapacho_plains
- wythers:sakura_forest
- wythers:spring_flower_fields
- wythers:spring_flower_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_forest</summary>

- #minecraft:is_forest
- minecraft:cherry_grove
- #c:flower_forests
- #c:tree_deciduous
- biomesoplenty:bamboo_grove
- biomesoplenty:cherry_blossom_grove
- biomesoplenty:lavender_forest
- biomesoplenty:maple_woods
- biomesoplenty:mediterranean_forest
- biomesoplenty:mystic_grove
- biomesoplenty:old_growth_woodland
- biomesoplenty:ominous_woods
- biomesoplenty:orchard
- biomesoplenty:origin_valley
- biomesoplenty:prairie
- biomesoplenty:seasonal_forest
- biomesoplenty:seasonal_orchard
- biomesoplenty:woodland
- terralith:alpha_islands
- terralith:alpha_islands_winter
- terralith:blooming_valley
- terralith:forested_highlands
- terralith:lavender_forest
- terralith:lavender_valley
- terralith:mirage_isles
- terralith:sakura_grove
- terralith:sakura_valley
- terralith:temperate_highlands
- wythers:dry_tropical_forest
- wythers:birch_taiga
- wythers:boreal_forest_red
- wythers:boreal_forest_yellow
- wythers:tangled_forest
- wythers:tropical_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_freezing</summary>

- minecraft:frozen_river
- minecraft:jagged_peaks
- minecraft:snowy_beach
- minecraft:snowy_plains
- minecraft:snowy_slopes
- #cobblemon:is_frozen_ocean
- #cobblemon:is_glacial
- #cobblemon:is_snowy
- #byg:is_snowy
- #c:snowy
- #forge:is_snowy
- byg:cardinal_tundra
- terralith:emerald_peaks
- terralith:scarlet_mountains
- terralith:skylands_winter
- terralith:snowy_badlands
- wythers:crimson_tundra
- wythers:frozen_island
- wythers:snowy_bog
- wythers:snowy_canyon
- wythers:snowy_peaks
- wythers:snowy_tundra

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_freshwater</summary>

- #cobblemon:is_river
- #cobblemon:is_swamp
- wythers:desert_lakes
- wythers:guelta
- wythers:tropical_forest_river

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_frozen_ocean</summary>

- minecraft:deep_frozen_ocean
- minecraft:frozen_ocean
- terralith:frozen_cliffs
- wythers:deep_icy_ocean
- wythers:icy_ocean

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_glacial</summary>

- minecraft:frozen_peaks
- minecraft:ice_spikes
- #byg:is_icy
- #c:icy
- terralith:cave/frostfire_caves
- terralith:frozen_cliffs
- terralith:glacial_chasm
- wythers:glacial_cliffs
- wythers:ice_cap
- wythers:icy_crags
- wythers:frozen_island

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_grassland</summary>

- #cobblemon:is_plains
- #cobblemon:is_savanna

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_highlands</summary>

- minecraft:meadow
- biomesoplenty:highland
- biomesoplenty:highland_moor
- terralith:alpine_highlands
- terralith:arid_highlands
- terralith:blooming_plateau
- terralith:highlands
- wythers:bamboo_jungle_highlands
- wythers:eucalyptus_deanei_forest
- wythers:forested_highlands
- wythers:highlands
- wythers:huangshan_highlands
- wythers:highland_tropical_rainforest
- wythers:jade_highlands
- wythers:wistman_woods

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_hills</summary>

- #minecraft:is_hill
- #cobblemon:is_highlands
- #c:mountain_slope
- #forge:is_slope
- biomesoplenty:jade_cliffs
- biomesoplenty:mediterranean_forest
- terralith:blooming_valley
- terralith:forested_highlands
- terralith:lavender_valley
- terralith:lush_valley
- terralith:moonlight_valley
- terralith:sakura_valley
- terralith:savanna_slopes
- terralith:temperate_highlands
- terralith:yosemite_lowlands
- wythers:autumnal_crags
- wythers:ayers_rock
- wythers:icy_crags
- wythers:old_growth_taiga_crags
- wythers:taiga_crags
- wythers:temperate_rainforest_crags
- wythers:thermal_taiga_crags
- wythers:windswept_jungle

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_island</summary>

- minecraft:mushroom_fields
- #cobblemon:is_tropical_island
- byg:lush_stacks
- terralith:alpha_islands
- terralith:alpha_islands_winter
- terralith:mirage_isles
- terralith:warped_mesa
- wythers:cold_island
- wythers:desert_island
- wythers:frigid_island
- wythers:frozen_island
- wythers:jungle_island
- wythers:mediterranean_island
- wythers:mediterranean_island_thermal_springs
- wythers:mushroom_island
- wythers:temperate_island
- wythers:tropical_island

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_jungle</summary>

- #minecraft:is_jungle
- terralith:cave/underground_jungle
- biomesoplenty:floodplain
- biomesoplenty:rainforest
- wythers:dripleaf_swamp
- wythers:eucalyptus_deanei_forest
- wythers:highland_tropical_rainforest
- wythers:humid_tropical_grassland
- wythers:jungle_canyon
- wythers:subtropical_forest
- wythers:subtropical_forest_edge
- wythers:subtropical_grassland
- wythers:tropical_forest
- wythers:tropical_forest_canyon
- wythers:tropical_grassland
- wythers:tropical_island
- wythers:tropical_rainforest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_lukewarm_ocean</summary>

- minecraft:deep_lukewarm_ocean
- minecraft:lukewarm_ocean
- wythers:tropical_beach
- wythers:tropical_island
- wythers:warm_stony_shore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_lush</summary>

- minecraft:lush_caves
- #forge:is_lush
- byg:lush_stacks
- terralith:cave/underground_jungle
- wythers:dripleaf_swamp
- wythers:lichenous_caves
- wythers:lichenous_dripstone_caves
- wythers:lush_dripstone_caves
- wythers:lush_fungous_dripstone_caves
- wythers:lush_shroom_caves

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_magical</summary>

- minecraft:dark_forest
- #byg:is_magical
- #wythers:is_dark_forest
- biomesoplenty:aspen_forest
- biomesoplenty:mystic_grove
- byg:skyris_vale
- terralith:amethyst_canyon
- terralith:amethyst_rainforest
- terralith:mirage_isles
- terralith:moonlight_grove
- terralith:moonlight_valley
- wythers:lantern_river
- wythers:mushroom_island
- wythers:snowy_thermal_taiga

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_mountain</summary>

- #minecraft:is_mountain
- #cobblemon:is_hills
- #forge:is_mountain
- biomesoplenty:crag
- terralith:stony_spires
- terralith:volcanic_peaks
- terralith:windswept_spires
- terralith:yosemite_cliffs
- wythers:tibesti_mountains
- wythers:tropical_volcano
- wythers:tsingy_forest
- wythers:volcano

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_mushroom</summary>

- minecraft:dark_forest
- minecraft:mushroom_fields
- #c:mushroom
- #forge:is_mushroom
- terralith:cave/fungal_caves
- biomesoplenty:fungal_jungle
- biomesoplenty:glowing_grotto
- biomesoplenty:mystic_grove
- byg:temperate_rainforest
- byg:tropical_rainforest
- byg:weeping_witch_forest
- darkerdepths:glowshroom_forest
- terralith:mirage_isles
- wythers:ancient_taiga
- wythers:deep_dark_incursion
- wythers:forbidden_forest
- wythers:mushroom_island
- wythers:phantasmal_forest
- wythers:phantasmal_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_ocean</summary>

- #minecraft:is_ocean
- #cobblemon:is_coast
- #cobblemon:is_cold_ocean
- #cobblemon:is_deep_ocean
- #cobblemon:is_frozen_ocean
- #cobblemon:is_lukewarm_ocean
- #cobblemon:is_temperate_ocean
- #cobblemon:is_warm_ocean

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_overworld</summary>

- #cobblemon:is_arid
- #cobblemon:is_cave
- #cobblemon:is_coast
- #cobblemon:is_cold
- #cobblemon:is_deep_dark
- #cobblemon:is_floral
- #cobblemon:is_forest
- #cobblemon:is_freshwater
- #cobblemon:is_grassland
- #cobblemon:is_highlands
- #cobblemon:is_island
- #cobblemon:is_jungle
- #cobblemon:is_magical
- #cobblemon:is_mountain
- #cobblemon:is_mushroom
- #cobblemon:is_ocean
- #minecraft:is_overworld
- #cobblemon:is_sky
- #cobblemon:is_spooky
- #cobblemon:is_temperate
- #cobblemon:is_thermal
- #cobblemon:is_volcanic

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_peak</summary>

- minecraft:frozen_peaks
- minecraft:jagged_peaks
- minecraft:snowy_slopes
- minecraft:stony_peaks
- #c:mountain_peak
- #forge:is_peak
- terralith:emerald_peaks
- terralith:rocky_mountains
- terralith:scarlet_mountains
- terralith:windswept_spires
- wythers:andesite_crags
- wythers:aspen_crags

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_plains</summary>

- minecraft:plains
- minecraft:sunflower_plains
- #cobblemon:is_highlands
- #byg:is_plains
- #c:plains
- #forge:is_plains
- biomesoplenty:clover_patch
- biomesoplenty:field
- biomesoplenty:fir_clearing
- biomesoplenty:grassland
- biomesoplenty:lavender_field
- biomesoplenty:marsh
- biomesoplenty:orchard
- biomesoplenty:pasture
- biomesoplenty:prairie
- biomesoplenty:seasonal_orchard
- terralith:scrubland
- terralith:brushland
- terralith:steppe
- terralith:valley_clearing
- wythers:berry_bog
- wythers:cool_forest_edge
- wythers:dry_tropical_grassland
- wythers:forest_edge
- wythers:spring_flower_fields
- wythers:subtropical_forest_edge
- wythers:tropical_grassland

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_plateau</summary>

- minecraft:savanna_plateau
- #byg:is_plateau
- #forge:is_plateau
- wythers:ayers_rock

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_river</summary>

- #minecraft:is_river
- terralith:warm_river
- wythers:guelta
- wythers:tropical_forest_river

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_sandy</summary>

- #cobblemon:is_badlands
- #cobblemon:is_desert
- #byg:is_sandy

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_savanna</summary>

- #minecraft:is_savanna
- biomesoplenty:lush_desert
- biomesoplenty:lush_savanna
- terralith:arid_highlands
- terralith:ashen_savanna
- terralith:brushland
- terralith:desert_oasis
- terralith:fractured_savanna
- terralith:hot_shrubland
- terralith:red_oasis
- terralith:savanna_badlands
- terralith:savanna_slopes
- terralith:shrubland
- wythers:granite_canyon
- wythers:tropical_forest_canyon
- wythers:tropical_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_shrubland</summary>

- #cobblemon:is_plains
- #cobblemon:is_savanna
- biomesoplenty:bog
- biomesoplenty:dryland
- biomesoplenty:field
- biomesoplenty:fungal_jungle
- biomesoplenty:lush_desert
- biomesoplenty:mediterranean_forest
- biomesoplenty:pumpkin_patch
- biomesoplenty:scrubland
- biomesoplenty:shrubland
- biomesoplenty:rocky_shrubland
- terralith:alpine_highlands
- terralith:arid_highlands
- terralith:brushland
- terralith:cold_shrubland
- terralith:hot_shrubland
- terralith:rocky_shrubland
- terralith:shrubland
- wythers:berry_bog
- wythers:chaparral
- wythers:crimson_tundra
- wythers:dry_tropical_grassland
- wythers:eucalyptus_salubris_woodland
- wythers:forest_edge
- wythers:kwongan_heath
- wythers:mediterranean_island
- wythers:outback
- wythers:scrub_forest
- wythers:scrubland
- wythers:tropical_grassland
- wythers:tundra

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_sky</summary>

- terralith:skylands_autumn
- terralith:skylands_spring
- terralith:skylands_summer
- terralith:skylands_winter

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_snowy</summary>

- minecraft:jagged_peaks
- minecraft:snowy_beach
- minecraft:snowy_plains
- minecraft:snowy_slopes
- #cobblemon:is_glacial
- #cobblemon:is_snowy_forest
- #cobblemon:is_snowy_taiga
- #byg:is_snowy
- #c:snowy
- byg:cardinal_tundra
- terralith:emerald_peaks
- terralith:scarlet_mountains
- terralith:skylands_winter
- terralith:snowy_badlands
- wythers:crimson_tundra
- wythers:frozen_island
- wythers:snowy_bog
- wythers:snowy_canyon
- wythers:snowy_peaks
- wythers:snowy_tundra

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_snowy_forest</summary>

- biomesoplenty:auroral_garden
- biomesoplenty:muskeg
- biomesoplenty:snowy_maple_woods
- terralith:alpha_islands_winter
- terralith:ice_marsh
- terralith:siberian_grove
- terralith:snowy_cherry_grove
- terralith:snowy_maple_forest
- wythers:huangshan_highlands
- wythers:jade_highlands
- wythers:snowy_fen

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_snowy_taiga</summary>

- minecraft:grove
- minecraft:snowy_taiga
- biomesoplenty:snowy_coniferous_forest
- biomesoplenty:snowy_fir_clearing
- biomesoplenty:snowy_maple_woods
- terralith:alpine_grove
- terralith:cold_shrubland
- terralith:siberian_grove
- terralith:snowy_maple_forest
- terralith:snowy_shield
- terralith:wintry_forest
- terralith:wintry_lowlands
- wythers:cold_island
- wythers:deep_snowy_taiga
- wythers:snowy_thermal_taiga

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_spooky</summary>

- minecraft:dark_forest
- #byg:is_spooky
- #forge:is_spooky
- #wythers:is_dark_forest
- biomesoplenty:ominous_woods
- byg:ebony_woods
- wythers:ancient_taiga
- wythers:tangled_forest
- wythers:twilight_meadow

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_swamp</summary>

- minecraft:mangrove_swamp
- minecraft:swamp
- #byg:is_swamp
- #c:swamp
- #forge:is_swamp
- #wythers:is_swamp
- biomesoplenty:bayou
- biomesoplenty:bog
- biomesoplenty:floodplain
- biomesoplenty:marsh
- biomesoplenty:wetland
- terralith:ice_marsh
- terralith:orchid_swamp
- wythers:billabong

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_taiga</summary>

- #minecraft:is_taiga
- #cobblemon:is_snowy_taiga
- #c:tree_coniferous
- #forge:is_coniferous
- biomesoplenty:coniferous_forest
- biomesoplenty:dead_forest
- biomesoplenty:fir_clearing
- biomesoplenty:forested_field
- biomesoplenty:jade_cliffs
- biomesoplenty:mediterranean_forest
- biomesoplenty:redwood_forest
- biomesoplenty:wetland
- terralith:bryce_canyon
- terralith:cloud_forest
- terralith:haze_mountain
- terralith:ice_marsh
- terralith:moonlight_grove
- terralith:moonlight_valley
- terralith:shield
- terralith:siberian_taiga
- terralith:yellowstone
- terralith:yosemite_lowlands
- wythers:ancient_taiga
- wythers:birch_taiga
- wythers:boreal_forest_red
- wythers:boreal_forest_yellow
- wythers:fen
- wythers:flooded_temperate_rainforest
- wythers:forested_highlands
- wythers:huangshan_highlands
- wythers:jade_highlands
- wythers:larch_taiga
- wythers:old_growth_taiga_crags
- wythers:old_growth_taiga_swamp
- wythers:pine_barrens
- wythers:taiga_crags
- wythers:temperate_rainforest
- wythers:temperate_rainforest_crags
- wythers:thermal_taiga
- wythers:thermal_taiga_crags

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_temperate</summary>

- #cobblemon:is_forest
- #cobblemon:is_plains

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_temperate_ocean</summary>

- minecraft:ocean
- minecraft:deep_ocean

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_thermal</summary>

- biomesoplenty:hot_springs
- terralith:caldera
- terralith:cave/thermal_caves
- terralith:yellowstone
- wythers:calcite_caverns
- wythers:mediterranean_island_thermal_springs
- wythers:snowy_thermal_taiga
- wythers:thermal_taiga_crags
- wythers:thermal_taiga
- wythers:tibesti_mountains
- wythers:danakil_desert

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_tropical_island</summary>

- biomesoplenty:tropics
- wythers:tropical_beach
- wythers:tropical_island
- wythers:tropical_volcano

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_tundra</summary>

- minecraft:ice_spikes
- minecraft:snowy_plains
- #c:snowy_plains
- biomesoplenty:cold_desert
- biomesoplenty:muskeg
- biomesoplenty:snowy_fir_clearing
- biomesoplenty:tundra
- byg:cardinal_tundra
- terralith:cold_shrubland
- terralith:gravel_desert
- terralith:rocky_shrubland
- terralith:snowy_badlands
- terralith:yellowstone
- wythers:crimson_tundra
- wythers:frigid_island
- wythers:ice_cap
- wythers:icy_crags
- wythers:snowy_tundra
- wythers:tundra

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_volcanic</summary>

- biomesoplenty:volcanic_plains
- biomesoplenty:volcano
- darkerdepths:molten_cavern
- terralith:cave/mantle_caves
- terralith:volcanic_crater
- terralith:volcanic_peaks
- wythers:icy_volcano
- wythers:tropical_volcano
- wythers:volcano
- wythers:volcanic_chamber
- wythers:volcanic_crater

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_warm_ocean</summary>

- minecraft:warm_ocean
- byg:lush_stacks

</details>

<details>
<summary><b>Tag:</b> #evolution:alolan</summary>

- #minecraft:is_beach
- #cobblemon:is_tropical_island

</details>

<details>
<summary><b>Tag:</b> #evolution:cyndaquil_quilava_hisui_bias</summary>

- #cobblemon:is_taiga
- #cobblemon:nether/is_crimson
- #cobblemon:nether/is_forest
- #cobblemon:nether/is_overgrowth

</details>

<details>
<summary><b>Tag:</b> #evolution:lilligant_unovan</summary>

- #cobblemon:is_forest
- #cobblemon:is_floral
- #cobblemon:is_tropical_island

</details>

<details>
<summary><b>Tag:</b> #evolution:oshawott_dewott_hisui_bias</summary>

- minecraft:stony_shore
- minecraft:snowy_beach
- #c:stony_shores
- terralith:basalt_cliffs
- terralith:granite_cliffs
- terralith:white_cliffs
- wythers:calcite_coast
- wythers:cold_island
- wythers:cold_stony_shore
- wythers:deepslate_shore
- wythers:frigid_island
- wythers:frozen_island
- wythers:gravelly_beach
- wythers:icy_shore

</details>

<details>
<summary><b>Tag:</b> #evolution:rowlet_dartrix_alolan</summary>

- #cobblemon:is_forest
- #cobblemon:is_taiga

</details>

<details>
<summary><b>Tag:</b> #evolution:rowlet_dartrix_hisui_bias</summary>

- #cobblemon:is_snowy_forest
- #cobblemon:is_snowy_taiga

</details>

<details>
<summary><b>Tag:</b> #evolution:sliggoo_hisuian</summary>

- #cobblemon:is_lush
- #cobblemon:is_dripstone

</details>

<details>
<summary><b>Tag:</b> #evolution:vivillon_elegant</summary>

- #cobblemon:is_spooky
- #cobblemon:is_magical

</details>

<details>
<summary><b>Tag:</b> #evolution:vivillon_monsoon</summary>

- #cobblemon:is_mountain
- #cobblemon:is_peak

</details>

<details>
<summary><b>Tag:</b> #evolution:vivillon_ocean</summary>

- #cobblemon:is_coast
- #cobblemon:is_warm_ocean

</details>

<details>
<summary><b>Tag:</b> #evolution:vivillon_river</summary>

- #cobblemon:is_river
- #cobblemon:is_swamp

</details>

<details>
<summary><b>Tag:</b> #evolution:vivillon_sun</summary>

- #cobblemon:is_sky
- #cobblemon:is_volcanic
- minecraft:sunflower_plains

</details>

<details>
<summary><b>Tag:</b> #evolution:vivillon_tundra</summary>

- #cobblemon:is_tundra
- #cobblemon:is_snowy_forest
- #cobblemon:is_glacial

</details>

<details>
<summary><b>Tag:</b> #has_block:acacia_log</summary>

- minecraft:savanna
- minecraft:savanna_plateau
- minecraft:windswept_savanna
- biomesoplenty:lush_desert
- biomesoplenty:amethyst_canyon
- biomesoplenty:amethyst_rainforest
- byg:araucaria_savanna
- byg:baobab_savanna
- byg:black_forest
- terralith:arid_highlands
- terralith:ashen_savanna
- terralith:fractured_savanna
- terralith:hot_shrubland
- terralith:moonlight_grove
- terralith:moonlight_valley
- terralith:savanna_badlands
- terralith:savanna_slopes
- wythers:bamboo_jungle_canyon
- wythers:bamboo_jungle_highlands
- wythers:bamboo_jungle_swamp
- wythers:bayou
- wythers:dry_savanna
- wythers:dry_tropical_forest
- wythers:eucalyptus_danei_forest
- wythers:eucalyptus_jungle_canyon
- wythers:eucalyptus_jungle
- wythers:eucalyptus_salubris_woodland
- wythers:flooded_jungle
- wythers:flooded_rainforest
- wythers:flooded_savanna
- wythers:flowering_platanal
- wythers:huangshan_highlands
- wythers:humid_tropical_grassland
- wythers:jacaranda_savanna
- wythers:jungle_canyon
- wythers:jungle_island
- wythers:lapacho_plains
- wythers:mediterranean_island_thermal_spring
- wythers:mediterranean_island
- wythers:mushroom_island
- wythers:pantanal
- wythers:sakura_forest
- wythers:savanna_badlands
- wythers:scrub_forest
- wythers:tropical_forest_canyon
- wythers:tropical_forest
- wythers:tropical_grassland
- wythers:tropical_rainforest
- wythers:tsingy_forest
- wythers:wooded_desert
- wythers:wooded_savanna

</details>

<details>
<summary><b>Tag:</b> #has_block:apricorn_log</summary>

- minecraft:sparse_jungle
- #cobblemon:is_badlands
- #cobblemon:is_desert
- #cobblemon:is_forest
- #cobblemon:is_grassland
- #cobblemon:is_hills
- #cobblemon:is_jungle
- #cobblemon:is_snowy_forest
- #cobblemon:is_swamp
- #cobblemon:is_taiga
- #cobblemon:is_tundra

</details>

<details>
<summary><b>Tag:</b> #has_block:birch_log</summary>

- minecraft:birch_forest
- minecraft:flower_forest
- minecraft:forest
- minecraft:old_growth_birch_forest
- #c:birch_forest
- biomesoplenty:aspen_glade
- biomesoplenty:auroral_garden
- biomesoplenty:seasonal_forest
- biomesoplenty:seasonal_orchard
- byg:aspen_forest
- byg:autumnal_forest
- byg:borealis_grove
- byg:howling_peaks
- byg:temperate_grove
- terralith:alpine_highlands
- terralith:arid_highlands
- terralith:birch_taiga
- terralith:blooming_valley
- terralith:cloud_forest
- terralith:haze_mountain
- terralith:lavender_forest
- terralith:lavender_valley
- terralith:lush_valley
- terralith:orchid_swamp
- terralith:sakura_grove
- terralith:sakura_valley
- terralith:shield
- terralith:temperate_highlands
- terralith:white_cliffs
- terralith:yosemite_lowlands
- wythers:aspen_crags
- wythers:autumnal_birch_forest
- wythers:autumnal_flower_forest
- wythers:autumnal_forest
- wythers:autumnal_forest_edge
- wythers:birch_swamp
- wythers:birch_taiga
- wythers:boreal_forest_red
- wythers:boreal_forest_yellow
- wythers:cool_forest_edge
- wythers:cool_forest
- wythers:eucalyptus_danei_forest
- wythers:eucalyptus_jungle_canyon
- wythers:eucalyptus_jungle
- wythers:eucalyptus_woodland
- wythers:sparse_eucalyptus_jungle
- wythers:sparse_eucalyptus_woodland
- wythers:thermal_taiga_crags
- wythers:thermal_taiga
- wythers:temperate_island
- wythers:warm_birch_forest
- wythers:waterlily_swamp
- wythers:windswept_forest

</details>

<details>
<summary><b>Tag:</b> #has_block:cherry_log</summary>

- minecraft:cherry_grove
- terralith:sakura_grove
- terralith:sakura_valley
- terralith:snowy_cherry_grove

</details>

<details>
<summary><b>Tag:</b> #has_block:crimson_log</summary>

- minecraft:crimson_forest
- betternether:crimson_glowing_woods
- betternether:crimson_pinewood
- byg:crimson_gardens
- gardens_of_the_dead:whistling_woods

</details>

<details>
<summary><b>Tag:</b> #has_block:dark_oak_log</summary>

- minecraft:dark_forest
- biomesoplenty:mystic_grove
- biomesoplenty:pumpkin_patch
- biomesoplenty:seasonal_forest
- byg:coconino_meadow
- byg:temperate_rainforest
- terralith:lavender_forest
- terralith:lavender_valley
- terralith:mirage_isles
- terralith:temperate_highlands
- wythers:ancient_moss_forest
- wythers:ancient_mossy_swamp
- wythers:dry_tropical_forest
- wythers:flooded_savanna
- wythers:highland_tropical_rainforest
- wythers:humid_tropical_grassland
- wythers:jungle_canyon
- wythers:pantanal
- wythers:phantasmal_forest
- wythers:phantasmal_swamp
- wythers:sparse_bamboo_jungle
- wythers:tropical_forest_canyon
- wythers:tropical_forest
- wythers:tropical_grassland
- wythers:tsingy_forest
- wythers:waterlily_swamp

</details>

<details>
<summary><b>Tag:</b> #has_block:flowering_azalea_leaves</summary>

- minecraft:lush_caves
- terralith:amethyst_canyon
- terralith:amethyst_rainforest
- terralith:blooming_valley
- terralith:desert_oasis
- terralith:desert_spires
- terralith:red_oasis
- terralith:sandstone_valley
- wythers:ancient_mossy_swamp
- wythers:flooded_jungle
- wythers:flooded_rainforest
- wythers:flowering_platanal
- wythers:jacaranda_savanna
- wythers:lush_shroom_cave
- wythers:mossy_cave
- wythers:pantanal
- wythers:sandy_jungle
- wythers:sparse_bamboo_jungle
- wythers:tropical_grassland
- wythers:tropical_island
- wythers:tropical_rainforest
- wythers:tsingy_forest

</details>

<details>
<summary><b>Tag:</b> #has_block:gravel</summary>

- minecraft:windswept_gravelly_hills
- biomesoplenty:cold_desert
- terralith:gravel_beach
- terralith:gravel_desert
- wythers:gravelly_beach
- wythers:gravelly_river

</details>

<details>
<summary><b>Tag:</b> #has_block:jungle_log</summary>

- #minecraft:is_jungle
- biomesoplenty:fungal_jungle
- biomesoplenty:rainforest
- byg:crag_gardens
- terralith:jungle_mountains
- terralith:rocky_jungle
- terralith:tropical_jungle
- wythers:bamboo_jungle_swamp
- wythers:desert_island
- wythers:desert_lake
- wythers:desert_river
- wythers:eucalyptus_danei_forest
- wythers:eucalyptus_jungle_canyon
- wythers:eucalyptus_jungle
- wythers:flooded_jungle
- wythers:flooded_rainforest
- wythers:flowering_platanal
- wythers:humid_tropical_grassland
- wythers:jacaranda_savanna
- wythers:jungle_island
- wythers:lapacho_plains
- wythers:mushroom_island
- wythers:pantanal
- wythers:sandy_jungle
- wythers:sparse_bamboo_jungle
- wythers:sparse_eucalyptus_jungle
- wythers:tropical_grassland
- wythers:tropical_island
- wythers:tropical_rainforest

</details>

<details>
<summary><b>Tag:</b> #has_block:mangrove_log</summary>

- minecraft:mangrove_swamp
- terralith:cave/underground_jungle
- wythers:coastal_mangrove
- wythers:dry_tropical_forest
- wythers:eucalyptus_danei_forest
- wythers:eucalyptus_jungle_canyon
- wythers:eucalyptus_jungle
- wythers:flooded_savanna
- wythers:forbidden_forest
- wythers:highland_tropical_rainforest
- wythers:jungle_canyon
- wythers:jungle_island
- wythers:mushroom_island
- wythers:sparse_eucalyptus_jungle
- wythers:tangled_forest
- wythers:tropical_forest_canyon
- wythers:tropical_forest
- wythers:tropical_grassland
- wythers:tropical_island
- wythers:tropical_rainforest

</details>

<details>
<summary><b>Tag:</b> #has_block:mud</summary>

- minecraft:mangrove_swamp
- terralith:cave/underground_jungle
- wythers:coastal_mangrove
- wythers:dripleaf_swamp

</details>

<details>
<summary><b>Tag:</b> #has_block:oak_log</summary>

- minecraft:flower_forest
- minecraft:forest
- minecraft:swamp
- minecraft:windswept_forest
- minecraft:wooded_badlands
- biomesoplenty:bamboo_grove
- biomesoplenty:cherry_blossom_grove
- biomesoplenty:dead_forest
- biomesoplenty:dryland
- biomesoplenty:floodplain
- biomesoplenty:lavender_forest
- biomesoplenty:maple_woods
- biomesoplenty:muskeg
- biomesoplenty:mystic_grove
- biomesoplenty:old_growth_woodland
- biomesoplenty:orchard
- biomesoplenty:origin_valley
- biomesoplenty:prairie
- biomesoplenty:seasonal_forest
- biomesoplenty:snowy_maple_woods
- biomesoplenty:woodland
- byg:autumnal_forest
- byg:coconino_meadow
- byg:mojave_desert
- byg:orchard
- byg:prairie
- byg:red_oak_forest
- byg:temperate_rainforest
- byg:white_mangrove_marshes
- terralith:alpha_islands
- terralith:alpha_islands_winter
- terralith:birch_taiga
- terralith:blooming_valley
- terralith:desert_oasis
- terralith:desert_spires
- terralith:forested_highlands
- terralith:fractured_savanna
- terralith:haze_mountain
- terralith:ice_marsh
- terralith:lavender_forest
- terralith:lavender_valley
- terralith:lush_valley
- terralith:mirage_isles
- terralith:red_oasis
- terralith:sakura_grove
- terralith:sakura_valley
- terralith:sandstone_valley
- terralith:shrubland
- terralith:temperate_highlands
- wythers:ancient_tropical_beech_forest
- wythers:ancient_emerald_beech_forest
- wythers:ancient_golden_beech_forest
- wythers:ancient_oak_swamp
- wythers:autumnal_flower_forest
- wythers:autumnal_forest
- wythers:autumnal_forest_edge
- wythers:autumnal_swamp
- wythers:boreal_forest_yellow
- wythers:cool_forest_edge
- wythers:cool_forest
- wythers:dry_tropical_forest
- wythers:birch_taiga
- wythers:boreal_forest_red
- wythers:boreal_forest_yellow
- wythers:flooded_temperate_rainforest
- wythers:flowering_platanal
- wythers:forbidden_forest
- wythers:forest_edge
- wythers:highland_tropical_rainforest
- wythers:tangled_forest
- wythers:tropical_forest
- wythers:humid_tropical_grassland
- wythers:jacaranda_savanna
- wythers:jungle_canyon
- wythers:jungle_island
- wythers:lapacho_plains
- wythers:larch_taiga
- wythers:maple_mountains
- wythers:mushroom_island
- wythers:sandy_jungle
- wythers:savanna_badlands
- wythers:sparse_bamboo_jungle
- wythers:spring_flower_forest
- wythers:subtropical_forest
- wythers:subtropical_forest_edge
- wythers:temperate_island
- wythers:temperate_rainforest
- wythers:temperate_rainforest_crags
- wythers:tropical_forest_canyon
- wythers:tropical_forest
- wythers:tropical_grassland
- wythers:tropical_rainforest
- wythers:tsingy_forest
- wythers:windswept_forest

</details>

<details>
<summary><b>Tag:</b> #has_block:red_sand</summary>

- #minecraft:is_badlands
- byg:atacama_desert
- byg:red_rock_valley
- terralith:ancient_sands
- terralith:arid_highlands
- terralith:bryce_canyon
- terralith:painted_mountains
- terralith:red_oasis
- wythers:ayers_rock
- wythers:badlands_desert
- wythers:badlands_jungle_canyon
- wythers:billabong
- wythers:kwongan_heath
- wythers:outback_desert
- wythers:outback
- wythers:red_desert
- wythers:red_rock_canyon
- wythers:wooded_badlands

</details>

<details>
<summary><b>Tag:</b> #has_block:sand</summary>

- minecraft:desert
- byg:mojave_desert
- terralith:ancient_sands
- terralith:cave/desert_caves
- terralith:desert_canyon
- terralith:desert_oasis
- terralith:desert_spires
- terralith:lush_desert
- terralith:sandstone_valley
- terralith:white_mesa
- wythers:cactus_desert
- wythers:deep_desert
- wythers:desert_island
- wythers:desert_pinnacles
- wythers:guelta
- wythers:sand_dunes
- wythers:sandy_jungle
- wythers:wooded_desert

</details>

<details>
<summary><b>Tag:</b> #has_block:spruce_log</summary>

- minecraft:grove
- minecraft:old_growth_pine_taiga
- minecraft:old_growth_spruce_taiga
- minecraft:snowy_taiga
- minecraft:taiga
- minecraft:windswept_forest
- biomesoplenty:dead_forest
- biomesoplenty:field
- biomesoplenty:forested_field
- biomesoplenty:hot_springs
- biomesoplenty:jade_cliffs
- biomesoplenty:maple_woods
- biomesoplenty:mediterranean_forest
- biomesoplenty:snowy_maple_woods
- byg:autumnal_taiga
- byg:autumnal_valley
- byg:borealis_grove
- byg:canadian_shield
- byg:coniferous_forest
- byg:frosted_coniferous_forest
- byg:frosted_taiga
- byg:howling_peaks
- byg:rose_fields
- byg:weeping_witch_forest
- biomesoplenty:wetland
- terralith:alpine_grove
- terralith:alpine_highlands
- terralith:bryce_canyon
- terralith:cloud_forest
- terralith:cold_shrubland
- terralith:forested_highlands
- terralith:haze_mountain
- terralith:ice_marsh
- terralith:lush_valley
- terralith:rocky_shrubland
- terralith:sakura_grove
- terralith:sakura_valley
- terralith:shield
- terralith:siberian_grove
- terralith:siberian_taiga
- terralith:snowy_maple_forest
- terralith:snowy_shield
- terralith:wintry_forest
- terralith:wintry_lowlands
- terralith:yellowstone
- terralith:yosemite_lowlands
- wythers:ancient_taiga
- wythers:bamboo_jungle_canyon
- wythers:birch_taiga
- wythers:boreal_forest_red
- wythers:boreal_forest_yellow
- wythers:cold_island
- wythers:cool_forest
- wythers:cool_forest_edge
- wythers:deep_snowy_taiga
- wythers:fen
- wythers:flooded_temperate_rainforest
- wythers:forested_highlands
- wythers:giant_sequoia_forest
- wythers:huangshan_highlands
- wythers:jade_highlands
- wythers:larch_taiga
- wythers:maple_mountains
- wythers:old_growth_taiga_crags
- wythers:old_growth_taiga_swamp
- wythers:pine_barrens
- wythers:snowy_fen
- wythers:snowy_peaks
- wythers:snowy_thermal_taiga
- wythers:taiga_crags
- wythers:temperate_island
- wythers:temperate_rainforest
- wythers:temperate_rainforest_crags
- wythers:thermal_taiga
- wythers:thermal_taiga_crags
- wythers:windswept_forest

</details>

<details>
<summary><b>Tag:</b> #has_block:warped_log</summary>

- minecraft:warped_forest
- betternether:old_warped_woods
- byg:crimson_gardens
- byg:wailing_garth
- byg:warped_desert
- wythers:deep_dark_forest

</details>

<details>
<summary><b>Tag:</b> #has_density:dense</summary>

- minecraft:dark_forest
- minecraft:mangrove_swamp
- #cobblemon:is_jungle
- #c:vegetation_dense
- #forge:is_dense
- #forge:is_dense/overworld

</details>

<details>
<summary><b>Tag:</b> #has_density:sparse</summary>

- #cobblemon:is_arid
- #cobblemon:is_grassland
- #cobblemon:is_tundra
- #c:vegetation_sparse
- #forge:is_sparse
- #forge:is_sparse/overworld

</details>

<details>
<summary><b>Tag:</b> #has_feature:apricorns_dense</summary>

- #cobblemon:is_badlands
- #cobblemon:is_desert
- #cobblemon:is_forest
- #cobblemon:is_jungle
- #cobblemon:is_snowy_forest
- #cobblemon:is_swamp
- #cobblemon:is_taiga

</details>

<details>
<summary><b>Tag:</b> #has_feature:apricorns_normal</summary>

- #cobblemon:is_hills
- #cobblemon:is_grassland
- #cobblemon:is_shrubland
- minecraft:sparse_jungle

</details>

<details>
<summary><b>Tag:</b> #has_feature:apricorns_sparse</summary>

- #cobblemon:is_tundra

</details>

<details>
<summary><b>Tag:</b> #has_feature:revival_herbs</summary>

- minecraft:lush_caves

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_dawn_stone_normal</summary>

- #cobblemon:is_peak
- #cobblemon:is_sky

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_dawn_stone_rare</summary>

- #cobblemon:is_floral
- #cobblemon:is_glacial
- #cobblemon:is_hills

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_dusk_stone_normal</summary>

- #cobblemon:is_spooky
- #cobblemon:is_taiga

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_dusk_stone_rare</summary>

- #cobblemon:is_swamp

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_fire_stone_nether</summary>

- #minecraft:is_nether

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_fire_stone_normal</summary>

- #cobblemon:is_desert
- #cobblemon:is_thermal
- #cobblemon:is_volcanic

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_fire_stone_rare</summary>

- #cobblemon:is_sandy

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_ice_stone_normal</summary>

- #cobblemon:is_glacial
- #cobblemon:is_snowy_forest
- #cobblemon:is_tundra

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_ice_stone_rare</summary>

- #cobblemon:is_freezing

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_leaf_stone_normal</summary>

- #cobblemon:is_forest
- #cobblemon:is_jungle
- #cobblemon:is_lush

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_leaf_stone_rare</summary>

- #cobblemon:is_swamp
- #cobblemon:is_tropical_island

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_moon_stone_dripstone</summary>

- #cobblemon:is_dripstone

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_moon_stone_normal</summary>

- #cobblemon:is_dripstone
- #cobblemon:is_taiga
- minecraft:mushroom_fields

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_moon_stone_rare</summary>

- #cobblemon:is_magical
- #cobblemon:is_spooky

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_shiny_stone_normal</summary>

- #cobblemon:is_floral
- #cobblemon:is_magical
- #cobblemon:is_sky

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_shiny_stone_rare</summary>

- #cobblemon:is_island
- #cobblemon:is_peak

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_sun_stone_normal</summary>

- #cobblemon:is_badlands
- #cobblemon:is_dripstone
- #cobblemon:is_grassland

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_sun_stone_rare</summary>

- #cobblemon:is_desert
- #cobblemon:is_tropical_island

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_thunder_stone_normal</summary>

- #cobblemon:is_highlands
- #cobblemon:is_hills

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_thunder_stone_rare</summary>

- #cobblemon:is_jungle
- #cobblemon:is_plains

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_water_stone_normal</summary>

- #cobblemon:is_ocean
- #cobblemon:is_freshwater

</details>

<details>
<summary><b>Tag:</b> #has_ore:ore_water_stone_rare</summary>

- #cobblemon:is_jungle
- #cobblemon:is_thermal
- #cobblemon:is_tropical_island

</details>

<details>
<summary><b>Tag:</b> #has_season:autumn</summary>

- #cobblemon:is_arid
- #cobblemon:is_cold_ocean
- #cobblemon:is_mountain
- #cobblemon:is_mushroom
- #cobblemon:is_taiga
- biomesoplenty:aspen_forest
- biomesoplenty:bog
- biomesoplenty:dead_forest
- biomesoplenty:dryland
- biomesoplenty:fungal_jungle
- biomesoplenty:maple_woods
- biomesoplenty:pasture
- biomesoplenty:prairie
- biomesoplenty:pumpkin_patch
- biomesoplenty:seasonal_forest
- biomesoplenty:seasonal_orchard
- byg:autumnal_forest
- byg:autumnal_taiga
- terralith:skylands_autumn
- terralith:temperate_highlands
- wythers:autumnal_birch_forest
- wythers:autumnal_crags
- wythers:autumnal_flower_forest
- wythers:autumnal_forest_edge
- wythers:autumnal_forest
- wythers:autumnal_plains
- wythers:autumnal_swamp
- wythers:forbidden_forest
- wythers:harvest_fields

</details>

<details>
<summary><b>Tag:</b> #has_season:spring</summary>

- #cobblemon:is_floral
- #cobblemon:is_lukewarm_ocean
- #cobblemon:is_magical
- #cobblemon:is_plains
- terralith:skylands_spring
- the_bumblezone:floral_meadow
- wythers:spring_flower_fields
- wythers:spring_flower_forest

</details>

<details>
<summary><b>Tag:</b> #has_season:summer</summary>

- #cobblemon:is_forest
- #cobblemon:is_jungle
- #cobblemon:is_lush
- #cobblemon:is_warm_ocean
- #cobblemon:is_swamp
- terralith:skylands_summer

</details>

<details>
<summary><b>Tag:</b> #has_season:winter</summary>

- #cobblemon:is_freezing
- terralith:skylands_winter
- wythers:deep_snowy_taiga

</details>

<details>
<summary><b>Tag:</b> #has_structure:village_plains_pokecenter</summary>


</details>

<details>
<summary><b>Tag:</b> #has_structure:village_plains_pokecenter_signtest</summary>


</details>

<details>
<summary><b>Tag:</b> #nether:is_basalt</summary>

- minecraft:basalt_deltas
- betternether:flooded_deltas
- cinderscapes:blackstone_shales
- incendium:ash_barrens
- incendium:volcanic_deltas
- incendium:withered_forest

</details>

<details>
<summary><b>Tag:</b> #nether:is_crimson</summary>

- minecraft:crimson_forest
- betternether:crimson_glowing_woods
- betternether:crimson_pinewood
- betternether:nether_swampland
- betternether:nether_swampland_terraces
- byg:crimson_gardens
- gardens_of_the_dead:whistling_woods

</details>

<details>
<summary><b>Tag:</b> #nether:is_desert</summary>

- minecraft:soul_sand_valley
- betternether:gravel_desert
- betternether:soul_plain
- byg:quartz_desert
- byg:warped_desert
- incendium:infernal_dunes
- incendium:weeping_valley

</details>

<details>
<summary><b>Tag:</b> #nether:is_forest</summary>

- betternether:nether_jungle
- betternether:nether_swampland
- betternether:nether_swampland_terraces
- betternether:old_swampland
- betternether:upside_down_forest
- byg:weeping_mire
- byg:withering_woods

</details>

<details>
<summary><b>Tag:</b> #nether:is_frozen</summary>

- byg:subzero_hypogeal

</details>

<details>
<summary><b>Tag:</b> #nether:is_fungus</summary>

- minecraft:crimson_forest
- minecraft:warped_forest
- betternether:crimson_glowing_woods
- betternether:crimson_pinewood
- betternether:nether_mushroom_forest
- betternether:nether_mushroom_forest_edge
- betternether:old_fungiwoods
- betternether:old_warped_woods
- byg:crimson_gardens
- byg:embur_bog
- byg:glowstone_garden
- byg:wailing_garth
- cinderscapes:luminous_grove
- gardens_of_the_dead:whistling_woods
- gardens_of_the_dead:soulblight_forest
- incendium:inverted_forest

</details>

<details>
<summary><b>Tag:</b> #nether:is_mountain</summary>

- minecraft:basalt_deltas
- incendium:volcanic_deltas

</details>

<details>
<summary><b>Tag:</b> #nether:is_overgrowth</summary>

- betternether:bone_reef
- betternether:nether_grasslands
- betternether:soul_plain
- betternether:sulfuric_bone_reef
- betternether:upside_down_forest
- betternether:upside_down_forest_cleared
- biomesoplenty:overgrowth
- byg:sythian_torrids

</details>

<details>
<summary><b>Tag:</b> #nether:is_quartz</summary>

- byg:quartz_desert
- cinderscapes:quartz_cavern
- incendium:quartz_flats

</details>

<details>
<summary><b>Tag:</b> #nether:is_soul_fire</summary>

- minecraft:soul_sand_valley
- byg:subzero_hypogeal
- byg:warped_desert
- incendium:quartz_flats
- incendium:weeping_valley

</details>

<details>
<summary><b>Tag:</b> #nether:is_soul_sand</summary>

- minecraft:soul_sand_valley
- betternether:soul_plain
- betternether:nether_grasslands
- betternether:nether_swampland
- betternether:nether_swampland_terraces
- betternether:old_swampland
- betternether:poor_nether_grasslands
- betternether:wart_forest
- betternether:wart_forest_edge
- byg:wailing_garth
- byg:warped_desert
- cinderscapes:ashy_shoals
- cinderscapes:blackstone_shales
- gardens_of_the_dead:soulblight_forest
- incendium:weeping_valley

</details>

<details>
<summary><b>Tag:</b> #nether:is_toxic</summary>

- biomesoplenty:erupting_inferno
- byg:brimstone_caverns
- byg:wailing_garth
- incendium:toxic_heap

</details>

<details>
<summary><b>Tag:</b> #nether:is_warped</summary>

- minecraft:warped_forest
- betternether:nether_jungle
- betternether:old_warped_woods
- byg:wailing_garth
- byg:warped_desert

</details>

<details>
<summary><b>Tag:</b> #nether:is_wasteland</summary>

- minecraft:nether_wastes
- betternether:magma_land
- betternether:nether_grasslands
- betternether:poor_nether_grasslands
- biomesoplenty:crystalline_chasm
- biomesoplenty:erupting_inferno
- byg:brimstone_caverns
- byg:magma_wastes
- cinderscapes:ashy_shoals
- cinderscapes:quartz_cavern
- incendium:ash_barrens
- incendium:toxic_heap

</details>

<details>
<summary><b>Tag:</b> #regional_bias_evolutions:alolan</summary>

- #minecraft:is_beach
- #cobblemon:is_tropical_island

</details>

<details>
<summary><b>Tag:</b> #regional_bias_evolutions:cyndaquil_quilava_hisui_bias</summary>

- #cobblemon:is_taiga
- #cobblemon:nether/is_crimson
- #cobblemon:nether/is_forest
- #cobblemon:nether/is_overgrowth

</details>

<details>
<summary><b>Tag:</b> #regional_bias_evolutions:oshawott_dewott_hisui_bias</summary>

- minecraft:stony_shore
- minecraft:snowy_beach
- #c:stony_shores
- terralith:basalt_cliffs
- terralith:granite_cliffs
- terralith:white_cliffs
- wythers:calcite_coast
- wythers:coastal_mangroves
- wythers:cold_island
- wythers:cold_stony_shore
- wythers:deepslate_shore
- wythers:frigid_island
- wythers:frozen_island
- wythers:gravelly_beach
- wythers:icy_shore
- wythers:mediterranean_island
- wythers:temperate_island
- wythers:tropical_island
- wythers:warm_stony_shore

</details>

<details>
<summary><b>Tag:</b> #regional_bias_evolutions:rowlet_dartrix_alolan</summary>

- #cobblemon:is_forest
- #cobblemon:is_taiga

</details>

<details>
<summary><b>Tag:</b> #regional_bias_evolutions:rowlet_dartrix_hisui_bias</summary>

- #cobblemon:is_snowy_forest
- #cobblemon:is_snowy_taiga

</details>
